[package]
name = "janus"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52", features = ["full"] }
discv4 = { git = "https://github.com/rllola/discv4" }
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand-std"] }
rand = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate", "macros"] }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
rlp = "0.6.1"
serde_json = "1.0"
snap = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes = "0.9"
ecb = "0.2"
sha3 = "0.12"
byteorder = "1.5"
hmac-sha256 = "1.1"
ctr = "0.10"
k256 = { version = "0.14", features = ["ecdh", "ecdsa-core", "arithmetic"] }

[dev-dependencies]
devp2p = { git = "https://github.com/rllola/devp2p" }
secp256k1_20 = { package = "secp256k1", version = "0.20", features = ["recovery", "global-context"] }

primitive-types = "0.9.1"
